# object-detection-lab

./: README.md  object-detection-lab.code-workspace
object-detection-tensorflow-api/: pyproject.toml
object-detector-v1/: pyproject.toml
object-detector-v1/scripts/: build_model.py  generate_single_prediction.py
